base/src/test/resources/failure/syntax/literate-ill-typed.aya.txt
In file $FILE:2:0 ->

  1 | open data Nat : Type | zero | suc Nat
  2 | /// test `suc Nat`
      ^----------------^

Error: Cannot check the expression
         Nat
       of type
         Type 0
       against the type
         Nat

1 error(s), 0 warning(s).
What are you doing?
